# ClinNoteRAG

./: .env.example  .gitignore  PROGRESS_REPORT.md  README.md  pyproject.toml  requirements.txt
apps/assessment/: admin.py  forms.py  models.py  urls.py  views.py
apps/assessment/management/commands/: import_results.py  ingest_concepts.py  run_evaluation.py
apps/assessment/migrations/: 0001_initial.py  0002_evaluationrun_case_num_evaluationrun_note_text_and_more.py  0003_evaluationrun_user_userprofile.py
chroma_db/: chroma.sqlite3
config/: settings.py  urls.py
scripts/: error_analysis.py  evaluate.py  ingest_concepts.py  llm_judge.py  make_report.py
services/: agent.py  embedder.py  naive_rag.py  no_rag.py
templates/: 404.html  base.html  base_auth.html
templates/assessment/: ablation.html  about.html  concepts.html  evaluate.html  faculty_dashboard.html  index.html  landing.html  login.html  my_results.html  note_result.html  profile.html  register.html  register_choice.html  run_detail.html
